<resources>
    <string name="app_name">LiteBrowser</string>
    <string name="hint_enter_url">Search or type URL</string>
    <string name="cd_more_options">More options</string>
    <string name="cd_nav_back">Navigation back</string>
    <string name="cd_nav_forward">Navigation forward</string>
    <string name="cd_tabs">Tabs</string>
    <string name="cd_menu">Menu</string>
    <string name="cd_add_tab">Add tab</string>
    <string name="cd_tab_icon">Tab icon</string>
    <string name="cd_close_tab">Close tab</string>

    <string name="settings_title">Settings</string>
    <string name="close_behavior_title">Browser close behavior</string>
    <string name="close_behavior_save">Save all tabs (default)</string>
    <string name="close_behavior_delete">Close and delete all tabs</string>
    <string name="open_behavior_title">Browser opening behavior</string>
    <string name="open_behavior_last">Open last active tab</string>
    <string name="open_behavior_new">Open a new tab</string>
    <string name="search_engine_title">Search engine</string>
    <string name="search_engine_change">Choose search engine</string>
    <string name="adblock_settings_title">Ad Block Settings</string>
</resources>
